// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CoordinateInput should call the onChange handler with empty results 1`] = `
<t
  dir="auto"
  guide={true}
  mask={
    Array [
      /\\\\d/,
      /\\\\d/,
      "°",
      " ",
      /\\\\d/,
      /\\\\d/,
      "′",
      " ",
      /\\\\d/,
      /\\\\d/,
      "″",
      " ",
      /\\[nNsS\\]/,
      " ",
      /\\\\d/,
      /\\\\d/,
      /\\\\d/,
      "°",
      " ",
      /\\\\d/,
      /\\\\d/,
      "′",
      " ",
      /\\\\d/,
      /\\\\d/,
      "″",
      " ",
      /\\[eEwW\\]/,
    ]
  }
  onBlur={[Function]}
  onChange={[Function]}
  pipe={[Function]}
  placeholder="04° 08′ 15″ N 162° 03′ 42″ E"
  placeholderChar="_"
  render={[Function]}
  showMask={false}
  type="text"
/>
`;

exports[`CoordinateInput should call the onChange handler with the converted results 1`] = `
<t
  dir="auto"
  guide={true}
  mask={
    Array [
      /\\\\d/,
      /\\\\d/,
      "°",
      " ",
      /\\\\d/,
      /\\\\d/,
      "′",
      " ",
      /\\\\d/,
      /\\\\d/,
      ".",
      /\\\\d/,
      /\\\\d/,
      /\\\\d/,
      "″",
      " ",
      /\\[nNsS\\]/,
      " ",
      /\\\\d/,
      /\\\\d/,
      /\\\\d/,
      "°",
      " ",
      /\\\\d/,
      /\\\\d/,
      "′",
      " ",
      /\\\\d/,
      /\\\\d/,
      ".",
      /\\\\d/,
      /\\\\d/,
      /\\\\d/,
      "″",
      " ",
      /\\[eEwW\\]/,
    ]
  }
  onBlur={[Function]}
  onChange={[Function]}
  pipe={[Function]}
  placeholder="04° 08′ 15″ N 162° 03′ 42″ E"
  placeholderChar="_"
  render={[Function]}
  showMask={false}
  type="text"
/>
`;

exports[`CoordinateInput should match the snapshot 1`] = `
<t
  dir="auto"
  guide={true}
  mask={
    Array [
      /\\\\d/,
      /\\\\d/,
      "°",
      " ",
      /\\\\d/,
      /\\\\d/,
      "′",
      " ",
      /\\\\d/,
      /\\\\d/,
      "″",
      " ",
      /\\[nNsS\\]/,
      " ",
      /\\\\d/,
      /\\\\d/,
      /\\\\d/,
      "°",
      " ",
      /\\\\d/,
      /\\\\d/,
      "′",
      " ",
      /\\\\d/,
      /\\\\d/,
      "″",
      " ",
      /\\[eEwW\\]/,
    ]
  }
  onBlur={[Function]}
  onChange={[Function]}
  pipe={[Function]}
  placeholder="04° 08′ 15″ N 162° 03′ 42″ E"
  placeholderChar="_"
  render={[Function]}
  showMask={false}
  type="text"
/>
`;

exports[`CoordinateInput should match the snapshot 2`] = `
<t
  dir="auto"
  guide={true}
  mask={
    Array [
      /\\\\d/,
      /\\\\d/,
      "°",
      " ",
      /\\\\d/,
      /\\\\d/,
      "′",
      " ",
      /\\\\d/,
      /\\\\d/,
      ".",
      /\\\\d/,
      /\\\\d/,
      /\\\\d/,
      "″",
      " ",
      /\\[nNsS\\]/,
      " ",
      /\\\\d/,
      /\\\\d/,
      /\\\\d/,
      "°",
      " ",
      /\\\\d/,
      /\\\\d/,
      "′",
      " ",
      /\\\\d/,
      /\\\\d/,
      ".",
      /\\\\d/,
      /\\\\d/,
      /\\\\d/,
      "″",
      " ",
      /\\[eEwW\\]/,
    ]
  }
  onBlur={[Function]}
  onChange={[Function]}
  pipe={[Function]}
  placeholder="04° 08′ 15″ N 162° 03′ 42″ E"
  placeholderChar="_"
  render={[Function]}
  showMask={false}
  type="text"
/>
`;

exports[`CoordinateInput should match the snapshot 3`] = `
<t
  dir="auto"
  guide={true}
  mask={
    Array [
      /\\\\d/,
      /\\\\d/,
      "D",
      " ",
      /\\\\d/,
      /\\\\d/,
      "M",
      " ",
      /\\\\d/,
      /\\\\d/,
      "S",
      " ",
      /\\[nNsS\\]/,
      " ",
      /\\\\d/,
      /\\\\d/,
      /\\\\d/,
      "D",
      " ",
      /\\\\d/,
      /\\\\d/,
      "M",
      " ",
      /\\\\d/,
      /\\\\d/,
      "S",
      " ",
      /\\[eEwW\\]/,
    ]
  }
  onBlur={[Function]}
  onChange={[Function]}
  pipe={[Function]}
  placeholder="04° 08′ 15″ N 162° 03′ 42″ E"
  placeholderChar="_"
  render={[Function]}
  showMask={false}
  type="text"
/>
`;
